# Exponenta

./: 000-index.txt  FEATURES.MD  LICENSE.md  README.MD  README.txt  READNE.MD  WHATSNEWS.MD  descript.ion
Docs/: [[16.05.2018]].txt  [[18.05.2018]].txt  [[18.06.2018]].txt
Docs/DRAFT/: FEATURES.DRAFT.txt  README-MAIN-SOURCE.txt
Docs/Temprorary/: [[17.05.2018]].txt  [[17.06.2018]].txt  [[19.05.2018]].txt  [[26.11.2018]].txt  [[27.11.2018]].txt  [[30.01.2019]].txt
Files/: 000-index.txt  descript.ion
Files/ISS-Template/: Elevation.iss  Exponenta.iss  Hidden_Start.iss
Files/Server-Init/: descript.ion
Files/UnSecure/: PartOfDomain.bat  Secure-001.cmd  Secure-002.cmd  Secure-003.cmd  Secure-004.cmd  UnSecure-004.cmd  Unsecure-001.cmd  Unsecure-002.cmd  Unsecure-003.cmd
Linux/: descript.ion
Linux/UBUNTU/: create-exponenta-admin-pack.bat  create-exponenta-admin-pack.sh  descript.ion
Linux/UBUNTU/EXPONENTA-MAIN/: AUTHORS  INSTALL.MD  Makefile.am  configure.ac  descript.ion
Linux/UBUNTU/EXPONENTA-MAIN/init/: Makefile.am  privatewww.descript.ion  zzz-user-default.conf
Linux/UBUNTU/EXPONENTA-MAIN/init/var/www/DATOS.server.grandkozel.ru/webdav/: webdav.descript.ion
Linux/UBUNTU/EXPONENTA-MAIN/mydiff/: Makefile.am  apache2.conf.mydiff  autoindex.conf.mydiff  descript.ion
Linux/UBUNTU/EXPONENTA-MAIN/origin/: Makefile.am  origin.descript.ion
Linux/UBUNTU/EXPONENTA-MAIN/scripts/: Makefile.am  del_userwebsite.in.sh  descript.ion  duck-install.in.sh  duck-repository.sources.list  new-apache.in.sh  new-proftpd.in.sh  new-ubuntuinit.in.sh  new_userwebsite.in.sh
Windows/: 000-index.txt  Install_MainExponenta.bat  descript.ion
Windows/DEST-MAIN/: InstallMainExponenta.bat  descript.ion  installmaindistrib.bat  installmaindistrib.ini  loadftpmaindistrib.bat  loadftpmaindistribHidden.bat  loadhttpmaindistrib.bat  loadhttpmaindistribHidden.bat  prechocoinstall.bat
Windows/DEST-STEALER/: Install_Styler.bat  Install_StylerFTP.bat  Install_StylerHTTP.bat  descript.ion  installFTP_Stylerdistrib.bat  installHTTP_Stylerdistrib.bat  install_Styler.ini  install_Stylerdistrib.bat  load_Stylerdistrib.bat  load_ftpStyler.bat  load_ftpStyler_vis.bat  load_httpStyler.bat  load_httpStyler_vis.bat
Windows/Dest/: INSTALL.MD  Install_MainExponenta.bat  descript.ion  load_distrib.bat
Windows/Dest-FTP/: INSTALL-YUDEN-HOME.MD  INSTALL.MD  INSTALL.txt  Install_MainExponenta.bat  README.MD  README.txt  descript.ion  duck-install.bat  install.bat  install.rtf  install1.md  install_distrib.bat  load_distrib.bat
Windows/Dest-HTTP/: INSTALL.MD  INSTALL.txt  Install_MainExponenta.bat  choc_pack.install.cmd  descript.ion  install_distrib.bat  load.bat  load_distrib.bat
Windows/Plugins/: descript.ion
Windows/Source-FTP/: README.MD  (+4 more)
(+688 files in other folders)
