#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Exponenta-Admin-Pack], [1.1.0_alpha], [yudenisov@mail.ru])

# Checks for programs.
AC_PROG_INSTALL

AM_INIT_AUTOMAKE
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 bin/Makefile
                 init/Makefile
                 mydiff/Makefile
                 scripts/Makefile
                 origin/Makefile])
AC_OUTPUT
